# game-of-life

./: .gitignore  CMakeLists.txt  Doxyfile  Game-of-Life  Life_board.cpp  Life_board.h  Life_field.cpp  Life_field.h  Life_window.cpp  Life_window.h  Makefile  Makefile.Debug  Makefile.Release  README.md  bands.grd  board.cpp  board.h  clock.grd  conanfile.txt  field.cpp  field.h  glider.grd  gosper-glider-gun.grd  main.cpp  quasar.grd  square_warp.grd  test.grd  toad.grd  window.cpp  window.h  x_warp.grd
data/: X.grd  beacon.grd  blinker.grd  doppler.grd  pulsar.grd
debug/: Game-of-Life  moc_Life_board.cpp  moc_Life_field.cpp  moc_Life_window.cpp
html/: _life__board_8cpp.html  _life__board_8h.html  _life__board_8h_source.html  _life__field_8cpp.html  _life__field_8h.html  _life__field_8h_source.html  _life__window_8cpp.html  _life__window_8h.html  _life__window_8h_source.html  annotated.html  class_life_board-members.html  class_life_board.html  class_life_field-members.html  class_life_field.html  class_life_window-members.html  class_life_window.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  pages.html
html/search/: all_6c.js  all_6d.js  all_6e.js  classes_6c.js  files_6c.js  functions_63.js  functions_6c.js  functions_6d.js  functions_6f.js  functions_70.js  functions_72.js  functions_73.js  functions_74.js  pages_67.js  search.js
release/: Game-of-Life
src/: CMakeLists.txt  board.cpp  board.hpp  field.cpp  field.hpp  main.cpp  window.cpp  window.hpp
